Adds tab saving and delete functionality with persistence
Implements local storage to persist saved items across sessions.

Adds new "Save Tab" button to capture current browser tab URL.

Adds "Delete All" button with red styling to clear all saved items.

Updates Chrome extension permissions to access tab information.

--- a/Chrome_Extension/manifest.json
+++ b/Chrome_Extension/manifest.json
@@ -7,7 +7,7 @@
     "default_popup": "index.html",
     "default_icon": "icon48.png"
   },
-  "permissions": ["storage"],
+  "permissions": ["tabs"],
   "icons": {
     "48": "icon48.png",
     "128": "icon128.png"
